# fenv

./: Cargo.toml  Cross.toml  LICENSE  README.md  deno.jsonc  fenv  fenv--abspath  fenv--ensure-local-version  fenv--install-sdk  fenv--is-global  fenv--local-sdk-dir  fenv--local-sdk-version  fenv-global  fenv-init  fenv-install  fenv-latest  fenv-local  fenv-prefix  fenv-root  fenv-uninstall  fenv-version  fenv-version-file  fenv-version-file-read  fenv-version-file-write  fenv-version-name  fenv-versions  fenv-which  init.sh  setup_fenv.sh  sonar-project.properties
.cursor/rules/: github.mdc  misc.mdc  root.mdc  rust.mdc
.github/: dependabot.yml
.github/actions/setup-deno/: action.yaml
.github/workflows/: deno.yml  rust.yml
ci/: coverage.sh
deno/cli/: cli.ts
deno/cli/commands/: init.ts  init_test.ts  types.ts
deno/cli/commands/__snapshots__/: init_test.ts.snap
deno/cli/src/: cli.ts
deno/cli/src/commands/: init.ts  init_test.ts
deno/lib/: context.ts  io.ts  mod.ts  os.ts  shell.ts
deno/lib/service/: init_service.ts  mod.ts  outputs.js  outputs.ts
deno/lib/service/src/: init_service.ts
deno/lib/src/: io.ts  io_test.ts  shell.ts
deno/lib/src/io/: io_test.ts
deno/test_lib/: mod.ts
deno/test_lib/src/: cli_wrapper.ts  context.ts  io.ts
resources/test/Dart_SDK/: sample.xml
resources/test/github_api/: latest_release_not_found.json  latest_release_rate_limit.json  latest_release_success.json
resources/test/install_service/: git_lf-remote_heads.txt  git_lf-remote_tags.txt  install-list-result-with-bare.txt  install-list-result-without-bare.txt
resources/test/package_config/: sample.json
shims/: dart  flutter
src/: args.rs  config.rs  context.rs  lib.rs  logger.rs  main.rs
src/model/: flutter_channel.rs  flutter_sdk.rs  flutter_version.rs  global.rs  local_flutter_sdk.rs  mod.rs  remote_flutter_sdk.rs  sdk.rs
src/release_service/model/: fenv_release.rs  mod.rs
src/sdk_service/: list_remote_sdk_cache.rs  local_repository.rs  mod.rs  remote_repository.rs  remote_sdk_list_cache.rs  results.rs  sdk_service.rs  version_prefix_match.rs
src/sdk_service/model/: flutter_channel.rs  flutter_sdk.rs  flutter_version.rs  local_flutter_sdk.rs  mod.rs  remote_flutter_sdk.rs
src/service/: init_service.rs  install_service.rs  mod.rs  service.rs
src/service/completions/: completions_service.rs  mod.rs
src/service/global/: global_service.rs  mod.rs
src/service/init/: init_service.rs  mod.rs
src/service/install/: flutter_command.rs  git_command.rs  install_sdk.rs  install_service.rs  list_remote_sdk.rs  list_remote_sdk_cache.rs  mod.rs
src/service/latest/: latest_service.rs  mod.rs
src/service/list_remote/: list_remote_sdk.rs  list_remote_service.rs  mod.rs
src/service/local/: local_service.rs  mod.rs
src/service/prefix/: mod.rs  prefix_service.rs
src/service/root/: mod.rs  root_service.rs
src/service/uninstall/: mod.rs  uninstall_service.rs
src/service/version/: mod.rs  version_service.rs
src/service/version_file/: mod.rs  version_file_service.rs
src/service/version_name/: mod.rs  version_name_service.rs
src/service/versions/: mod.rs  versions_service.rs
src/service/which/: mod.rs  which_service.rs
src/service/workspace/: dart_sdk_xml.rs  mod.rs  package_config_json.rs  workspace_service.rs
src/util/: chrono_wrapper.rs  io.rs  list_remote_sdk_cache.rs  mod.rs  package_config_json.rs  path_like.rs
tools/: cargo_build_and_install.sh  cargo_run.sh  coverage.sh
(+10 files in other folders)
