[package]
name = "fenv"
version = "0.2.0-SNAPSHOT"
authors = ["fenv <fenv@jerry.company>"]
license = "MIT license"
description = "Simple flutter sdk version management"
readme = "README.md"
homepage = "https://github.com/fenv-org/fenv"
repository = "https://github.com/fenv-org/fenv"
keywords = ["cli", "flutter", "version-management"]
categories = ["command-line-utilities", "flutter"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
chrono = "0.4.26"
clap = { version = "4.5.3", features = ["derive", "env"] }
clap_complete = "4.4.3"
env_logger = "0.10.0"
indoc = "2.0.4"
is_executable = "1.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
mockall = "0.12.1"
nix = "0.26.2"
quick-xml = "0.30.0"
regex = "1.9.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tempfile = "3.8.0"

[dev-dependencies]
rand = "0.8.5"
