[package]
name = "fenv"
version = "0.2.0-SNAPSHOT"
authors = ["fenv <fenv@jerry.company>"]
license = "MIT license"
description = "Simple flutter sdk version management"
readme = "README.md"
homepage = "https://github.com/fenv-org/fenv"
repository = "https://github.com/fenv-org/fenv"
keywords = ["cli", "flutter", "version-management"]
categories = ["command-line-utilities", "flutter"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.4.3"
env_logger = "0.10.0"
colored = "2.1.0"
dirs = "5.0.1"
flate2 = "1.0.28"
git2 = "0.18.2"
indoc = "2.0.4"
is_executable = "1.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
mockall = "0.12.1"
nix = { version = "0.28.0", features = ["process"] }
quick-xml = "0.31.0"
regex = "1.10.4"
reqwest = { version = "0.12.19", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tar = "0.4.44"
tempfile = "3.10.1"
xz2 = "0.1.7"
zip = "0.6.6"

[dev-dependencies]
rand = "0.8.5"
