[package]
name = "fenv"
version = "0.3.0-SNAPSHOT"
authors = ["fenv <fenv@jerry.company>"]
license = "MIT license"
description = "Simple flutter sdk version management"
readme = "README.md"
homepage = "https://github.com/fenv-org/fenv"
repository = "https://github.com/fenv-org/fenv"
keywords = ["cli", "flutter", "version-management"]
categories = ["command-line-utilities", "flutter"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.4.3"
env_logger = "0.10.0"
colored = "2.1.0"
dirs = "5.0.1"
flate2 = "1.0.28"
git2 = "0.18.2"
indoc = "2.0.4"
is_executable = "1.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
mockall = "0.12.1"
nix = { version = "0.30.1", features = ["process"] }
quick-xml = "0.31.0"
regex = "1.10.4"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tar = "0.4.44"
tempfile = "3.10.1"
xz2 = "0.1.7"
zip = "3.0.0"
indicatif = "0.17.7"
futures-util = "0.3"
tokio = { version = "1.36", features = ["full"] }
semver = "1.0.26"

[dev-dependencies]
rand = "0.9.1"

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies.openssl]
version = "0.10"
features = ["vendored"]
